--- a/ServiceDeskDashboardApi/appsettings.json
+++ b/ServiceDeskDashboardApi/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=JiraData;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  }
+  },
+  "AzureServiceBusConnectionString": "Endpoint=sb://servicedeskdashboardservicebus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=WZdimnTwi2bSUXMpIHMAIyAxBj/Sh1NMQ+ASbL4HIJU="
 }
